Finish the test, ready to build pipeline and fix the FE